--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -524,6 +524,7 @@
     <Content Include="Content\view\error.css" />
     <Content Include="Content\view\idsmors\report_wagons.css" />
     <Content Include="Content\view\idsmors\park_wagons.css" />
+    <Content Include="Content\view\idsrwt\outgoing.css" />
     <Content Include="Content\view\idsrwt\incoming.css" />
     <Content Include="Content\view\idsrwt\arrival.css" />
     <Content Include="Content\view\shared\filter-menu.css" />
@@ -1005,6 +1006,7 @@
     <Content Include="Scripts\bootstrap-select.min.js.map" />
     <Content Include="Scripts\bootstrap-select.js.map" />
     <Content Include="Content\bootstrap-select.css.map" />
+    <Content Include="Areas\IDSRWT\Views\Home\Outgoing.cshtml" />
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -1108,6 +1110,7 @@
     <Content Include="Scripts\view\idsmors\electronic_cards.js" />
     <Content Include="Scripts\view\idsmors\report_wagons.js" />
     <Content Include="Scripts\view\idsmors\park_wagons.js" />
+    <Content Include="Scripts\view\idsrwt\outgoing.js" />
     <Content Include="Scripts\view\idsrwt\incoming.js" />
     <Content Include="Scripts\view\idsrwt\arrival.js" />
     <Content Include="Scripts\view\shared\common.js" />
