--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFInstructionalLetters.cs" />
+    <Compile Include="Concrete\RWT\EFInstructionalLettersWagon.cs" />
     <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Pay.cs" />
     <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Cont.cs" />
     <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Acts.cs" />
@@ -173,6 +175,8 @@
     <Compile Include="Entities\Directory\Directory_Cars_KIS.cs" />
     <Compile Include="Entities\Directory\Directory_Wagons.cs" />
     <Compile Include="Entities\Directory\Directory_WagonsRent.cs" />
+    <Compile Include="Entities\RWT\InstructionalLetters.cs" />
+    <Compile Include="Entities\RWT\InstructionalLettersWagon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
