add ids sap is & web api client sap

--- a/Test/App.config
+++ b/Test/App.config
@@ -2,16 +2,16 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
- <appSettings>
+  <appSettings>
     <!-- *********** БИБЛИОТЕКА ЛОГИРОВАНИЯ **************************** -->
     <!-- Настройки логирования -->
     <add key="ESourceName" value="METRANS" />
@@ -31,7 +31,7 @@
     <add key="FLogException" value="True" />
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
-  <!-- *********** WEB API    ******************************************** -->
+    <!-- *********** WEB API    ******************************************** -->
     <add key="WebApiMTURL" value="https://inform.umtrans.com.ua" />
     <!--http://159.224.194.27:81-->
     <!--portal.metrans.com.ua-->
@@ -82,6 +82,22 @@
     <add key="SMS_HOST" value="10.21.2.139" />
     <add key="SMS_PORT" value="8787" />
 
+    <!-- сервис выполнения запросов в сап -->
+    <!-- ПРОДУКТИВ -->
+    <!--<add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner"/>
+    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx"/>
+    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx"/>
+    <add key="sap_login" value="mii_oil"/>
+    <add key="sap_pass" value="Integra_0i1"/>
+    <add key="STTN" value="103"/>-->
+    <!-- ТЕСТ -->
+    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx" />
+    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx" />
+    <add key="sap_login" value="mii_oil" />
+    <add key="sap_pass" value="Start_123" />
+    <add key="STTN" value="103" />
+
   </appSettings>
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
@@ -90,7 +106,7 @@
     <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
-    
+
     <!--<add name="log" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="metrans" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
