--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -39,6 +39,21 @@
     <add key="FLogException" value="True" />
     <add key="FLogEvent" value="False" />
     <add key="FLogServices" value="False" />
+    <!-- сервис выполнения запросов в сап -->
+    <!-- ПРОДУКТИВ -->
+    <!--<add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner"/>
+    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx"/>
+    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx"/>
+    <add key="sap_login" value="mii_oil"/>
+    <add key="sap_pass" value="Integra_0i1"/>
+    <add key="STTN" value="103"/>-->
+    <!-- ТЕСТ -->
+    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx" />
+    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx" />
+    <add key="sap_login" value="mii_oil" />
+    <add key="sap_pass" value="Start_123" />
+    <add key="STTN" value="103" />
   </appSettings>
   <!--
     Описание изменений web.config см. по адресу http://go.microsoft.com/fwlink/?LinkId=235367.
