--- a/IDS/IDS.csproj
+++ b/IDS/IDS.csproj
@@ -53,7 +53,9 @@
     <Compile Include="IDSMORS.cs" />
     <Compile Include="IDSTransfer.cs" />
     <Compile Include="IDSThread.cs" />
+    <Compile Include="IDS_SAP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebAPIClientSAP.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EFIDS\EFIDS.csproj">
