--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Abstract\IWebView.cs" />
     <Compile Include="Abstract\IWebAccess.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_BorderCheckpoint.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_PayerSender.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_WagonsRent.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Wagons.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Cars_KIS.cs" />
@@ -183,6 +184,7 @@
     <Compile Include="Entities\RWT\OutgoingCars.cs" />
     <Compile Include="Entities\RWT\OutgoingSostav.cs" />
     <Compile Include="Entities\RWT\SAPIncomingSupply.cs" />
+    <Compile Include="Entities\Directory\Directory_PayerSender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
