--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Abstract\IWebView.cs" />
     <Compile Include="Abstract\IWebAccess.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_BorderCheckpoint.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_WagonOperations.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_WagonLoadingStatus.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_ParkWays.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_PayerSender.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_WagonsRent.cs" />
@@ -101,6 +103,9 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFWagonInternalRoutes.cs" />
+    <Compile Include="Concrete\RWT\EFWagonInternalOperation.cs" />
+    <Compile Include="Concrete\RWT\EFWagonInternalMovement.cs" />
     <Compile Include="Concrete\RWT\EFSAPIncomingSupply.cs" />
     <Compile Include="Concrete\RWT\EFOutgoingCars.cs" />
     <Compile Include="Concrete\RWT\EFOutgoingSostav.cs" />
@@ -185,15 +190,8 @@
     <Compile Include="Entities\RWT\SAPIncomingSupply.cs" />
     <Compile Include="Entities\Directory\Directory_PayerSender.cs" />
     <Compile Include="Entities\Directory\Directory_ParkWays.cs" />
-    <Compile Include="Model\Directory_ConditionArrival.cs" />
-    <Compile Include="Model\Directory_Station.cs" />
     <Compile Include="Entities\Directory\Directory_WagonLoadingStatus.cs" />
     <Compile Include="Entities\Directory\Directory_WagonOperations.cs" />
-    <Compile Include="Model\Directory_Wagons.cs" />
-    <Compile Include="Model\Directory_WagonsRent.cs" />
-    <Compile Include="Model\Directory_Ways.cs" />
-    <Compile Include="Model\Model1.cs" />
-    <Compile Include="Model\OutgoingCars.cs" />
     <Compile Include="Entities\RWT\WagonInternalMovement.cs" />
     <Compile Include="Entities\RWT\WagonInternalOperation.cs" />
     <Compile Include="Entities\RWT\WagonInternalRoutes.cs" />
@@ -203,7 +201,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
