--- a/IDS/IDS.csproj
+++ b/IDS/IDS.csproj
@@ -49,11 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helper\dir_library.cs" />
+    <Compile Include="Helper\wir_library.cs" />
     <Compile Include="IDSDirectory.cs" />
     <Compile Include="IDSMORS.cs" />
     <Compile Include="IDSTransfer.cs" />
     <Compile Include="IDSThread.cs" />
     <Compile Include="IDS_SAP.cs" />
+    <Compile Include="IDS_WIR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebAPIClientSAP.cs" />
   </ItemGroup>
