--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFUZ_DOC_OUT.cs" />
     <Compile Include="Concrete\RWT\EFWagonInternalRoutes.cs" />
     <Compile Include="Concrete\RWT\EFWagonInternalOperation.cs" />
     <Compile Include="Concrete\RWT\EFWagonInternalMovement.cs" />
@@ -195,6 +196,7 @@
     <Compile Include="Entities\RWT\WagonInternalMovement.cs" />
     <Compile Include="Entities\RWT\WagonInternalOperation.cs" />
     <Compile Include="Entities\RWT\WagonInternalRoutes.cs" />
+    <Compile Include="Entities\RWT\UZ_DOC_OUT.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
