deverloper output wagon (kis)

--- a/Test/App.config
+++ b/Test/App.config
@@ -82,21 +82,21 @@
     <add key="SMS_HOST" value="10.21.2.139" />
     <add key="SMS_PORT" value="8787" />
 
+    <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Транспорт в ИДС RWT  -->
+    <add key="ActiveTransferOutgoingOfKIS" value="True" />
+    <add key="IntervalTransferOutgoingOfKIS" value="1800" /><!-- выборка 1 раз в 30 мин -->
+    <add key="TransferControlTimeIntervalKIS" value="12" /><!-- выборка на 12 часов  ранее -->
+    <add key="TransferSetOutgoingWagonOfKis" value="True" /><!-- Сдавать вагоны на УЗ автоматически по данным КИС -->
+    
     <!-- сервис выполнения запросов в сап -->
     <!-- ПРОДУКТИВ -->
-    <!--<add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner"/>
-    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx"/>
-    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx"/>
-    <add key="sap_login" value="mii_oil"/>
-    <add key="sap_pass" value="Integra_0i1"/>
-    <add key="STTN" value="103"/>-->
+
     <!-- ТЕСТ -->
     <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
-    <add key="sap_transaction_reservation" value="?Transaction=Oil45/SAP/trx/SelectRESB.trx" />
-    <add key="sap_transaction_supply" value="?Transaction=Oil45/SAP/trx/SelectWB2_V_LIKP_LIPS2.trx" />
-    <add key="sap_login" value="mii_oil" />
-    <add key="sap_pass" value="Start_123" />
-    <add key="STTN" value="103" />
+    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
+    <add key="sap_login" value="service_user" />
+    <add key="sap_pass" value="IIyr8OBHnSg8oO" />
+
 
   </appSettings>
   <connectionStrings>
