--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -80,10 +80,11 @@
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
     <!-- *********** СЕРВИСЫ  ***************************************** -->
-    <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Еранспорт в ИДС RWT  -->
+    <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Транспорт в ИДС RWT  -->
     <add key="ActiveTransferOutgoingOfKIS" value="True" />
     <add key="IntervalTransferOutgoingOfKIS" value="1800" /><!-- выборка 1 раз в 30 мин -->
     <add key="TransferControlTimeIntervalKIS" value="12" /><!-- выборка на 12 часов  ранее -->
+    <add key="TransferSetOutgoingWagonOfKis" value="True" /><!-- Сдавать вагоны на УЗ автоматически по данным КИС -->    
     <!--Подключение к Модулю согласования-->
     <add key="SMS_HOST" value="10.21.2.139" />
     <add key="SMS_PORT" value="8787" />
