--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -90,6 +90,15 @@
     <add key="SMS_PORT" value="8787" />
     <!-- Получение информации о вагоне -->
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
+
+    <!-- Сервис доступа к САП входящая и исходящая поставка -->
+    <!-- ПРОДУКТИВ -->
+
+    <!-- ТЕСТ -->
+    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
+    <add key="sap_login" value="service_user" />
+    <add key="sap_pass" value="IIyr8OBHnSg8oO" />
   </appSettings>
   <connectionStrings>
     <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
@@ -98,7 +107,7 @@
     <!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
+    <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
   </connectionStrings>
   <entityFramework>
     <providers>
