--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -607,6 +607,9 @@
     <Content Include="Images\idsrwt\stop.png" />
     <Content Include="Images\idsrwt\user.png" />
     <Content Include="Images\idsrwt\warning.png" />
+    <Content Include="Images\idsrwt\wsd\park.svg" />
+    <Content Include="Images\idsrwt\wsd\station.svg" />
+    <Content Include="Images\idsrwt\wsd\way.png" />
     <Content Include="Images\logo.png" />
     <Content Include="Images\portfolio\fullsize\1.jpg" />
     <Content Include="Images\portfolio\fullsize\2.jpg" />
