--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -197,15 +197,15 @@
     <Compile Include="Entities\RWT\WagonInternalOperation.cs" />
     <Compile Include="Entities\RWT\WagonInternalRoutes.cs" />
     <Compile Include="Entities\RWT\UZ_DOC_OUT.cs" />
-    <Compile Include="Model\Directory_Ways.cs" />
-    <Compile Include="Model\Model1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
