--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Abstract\IWebView.cs" />
     <Compile Include="Abstract\IWebAccess.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_BorderCheckpoint.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_Locomotive.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_OuterWays.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_LocomotiveStatus.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_WagonOperations.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_WagonLoadingStatus.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_ParkWays.cs" />
@@ -197,6 +200,9 @@
     <Compile Include="Entities\RWT\WagonInternalOperation.cs" />
     <Compile Include="Entities\RWT\WagonInternalRoutes.cs" />
     <Compile Include="Entities\RWT\UZ_DOC_OUT.cs" />
+    <Compile Include="Entities\Directory\Directory_OuterWays.cs" />
+    <Compile Include="Entities\Directory\Directory_Locomotive.cs" />
+    <Compile Include="Entities\Directory\Directory_LocomotiveStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
