--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -61,8 +61,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="TMSoft.Gohub.Client.Net, Version=1.20.218.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="TMSoft.Gohub.Client.Net">
       <HintPath>..\UZ_SMS\TMSoft\TMSoft.Gohub.Client.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -130,17 +129,6 @@
       <Project>{3e1f3160-047b-435a-b0c9-bd3000f1581a}</Project>
       <Name>UZ_SMS</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <COMReference Include="gohubclientcomLib">
-      <Guid>{EB746ACA-C81E-42EE-B1C4-C435A8CD0082}</Guid>
-      <VersionMajor>1</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>tlbimp</WrapperTool>
-      <Isolated>False</Isolated>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
