--- a/Test/packages.config
+++ b/Test/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.11.24" targetFramework="net45" />
+  <package id="log4net" version="2.0.12" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess" version="19.8.0" targetFramework="net45" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net45" />
 </packages>
