--- a/IDS/IDS.csproj
+++ b/IDS/IDS.csproj
@@ -55,6 +55,8 @@
     <Compile Include="IDSMORS.cs" />
     <Compile Include="IDSTransfer.cs" />
     <Compile Include="IDSThread.cs" />
+    <Compile Include="IDS_Base.cs" />
+    <Compile Include="IDS_RWT.cs" />
     <Compile Include="IDS_SAP.cs" />
     <Compile Include="IDS_WIR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
