end optimize wagon_marking

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_UZ_DOCController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_ArrivalCarsController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_ArrivalSostavController.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_IncomingController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WSDController.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ConsigneeController.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ArrivalSostavController.cs" />
